<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_events"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/text_events"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_blogs"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/text_blogs"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notifications"
        android:enabled="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/text_notifications"
        app:showAsAction="ifRoom" />
</menu>